Tue Feb 20 17:10:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Extension_Context.{h,cpp}:
          Moved to ciao/extension

Tue Feb 20 16:17:46 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * Merged ciao_core_2 to head.

        Tue Feb 20 16:03:02 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * RACE/Plan_Analyzer/Interface/PlanIngress.idl
        * RACE/Planners/Interface/Planner_I.idl
        * RACE/Controller/Component/Controller.idl
        * RACE/Output_Adapters/Interface/PlanEgress.idl
        * RACE/Planner_Manager/Interface/Planner_Manager_I.idl

          Further updates to support migration of Deployment IDL to
          DAnCE/Deployment.

  Mon Feb 19 21:27:11 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/ciao_events_base_dnc.mpb
        * MPC/config/ciaoexe.mpb
        * MPC/config/ciao_client_dnc.mpb
        * MPC/config/ciao_container_dnc.mpb
        * MPC/config/ciao_servant_dnc.mpb
        * MPC/config/ciao_component_dnc.mpb
        * MPC/config/ciao_events_dnc.mpb
        * MPC/config/ciao_server_dnc.mpb

          Removed the _DnC_ from a bunch of projects, as since we no longer have
          DnC and non DnC versions of CIAO, its reall superfluous.

        * DAnCE/Deployment
        * DAnCE/Deployment/Deployment_NodeApplication.idl
        * DAnCE/Deployment/Deployment_Data.idl
        * DAnCE/Deployment/Deployment_svnt_export.h
        * DAnCE/Deployment/Deployment_Base.idl
        * DAnCE/Deployment/Deployment_RepositoryManager.idl
        * DAnCE/Deployment/Deployment_Packaging_Data.idl
        * DAnCE/Deployment/Deployment_Target_Data.idl
        * DAnCE/Deployment/CIAO_NodeApplication_CallBack.idl
        * DAnCE/Deployment/Deployment_TargetData.idl
        * DAnCE/Deployment/Deployment.idl
        * DAnCE/Deployment/Deployment_NodeManager.idl
        * DAnCE/Deployment/Deployment_TargetManager.idl
        * DAnCE/Deployment/Deployment_Container.idl